--- a/blogs/blogOutletGiay-2.html
+++ b/blogs/blogOutletGiay-2.html
@@ -53,11 +53,11 @@
 						</button>
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
-								<a class="nav-item nav-link" href="../index.html">Home</a>
-								<a class="nav-item nav-link" href="../collection.html">Collection</a>
-								<a class="nav-item nav-link" href="../shoes.html">Shoes</a>
+								<a class="nav-item nav-link" href="../index.html">Trang chủ</a>
+								<a class="nav-item nav-link" href="../collection.html">Bộ sưu tập</a>
+								<a class="nav-item nav-link" href="../shoes.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="../blogs.html">Blogs</a>
-								<a class="nav-item nav-link" href="../contact.html">Contact</a>
+								<a class="nav-item nav-link" href="../contact.html">Liên hệ</a>
 								<a class="nav-item nav-link last" href="#"><img src="../images/search_icon.png"></a>
 								<a class="nav-item nav-link last" href="../contact.html"><img
 										src="../images/shop_icon.png"></a>
@@ -212,23 +212,23 @@
 			<div class="mail_section">
 				<div class="row">
 					<div class="col-sm-6 col-lg-2">
-						<div><a href="#"><img src="../images/footer-logo.png"></a></div>
+						<div><a href="#"><img src="../images/footer-logo.png" alt=""></a></div>
 					</div>
 					<div class="col-sm-6 col-lg-2">
-						<div class="footer-logo"><img src="../images/phone-icon.png"><span class="map_text">(71)
+						<div class="footer-logo"><img src="../images/phone-icon.png" alt=""><span class="map_text">(71)
 								1234567890</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
-						<div class="footer-logo"><img src="../images/email-icon.png"><span
+						<div class="footer-logo"><img src="../images/email-icon.png" alt=""><span
 								class="map_text">Demo@gmail.com</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
 						<div class="social_icon">
 							<ul>
-								<li><a href="#"><img src="../images/fb-icon.png"></a></li>
-								<li><a href="#"><img src="../images/twitter-icon.png"></a></li>
-								<li><a href="#"><img src="../images/in-icon.png"></a></li>
-								<li><a href="#"><img src="../images/google-icon.png"></a></li>
+								<li><a href="#"><img src="../images/fb-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="../images/twitter-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="../images/in-icon.png" alt=""></a></li>
+								<li><a href="#"><img src="../images/google-icon.png" alt=""></a></li>
 							</ul>
 						</div>
 					</div>
@@ -238,52 +238,48 @@
 			<div class="footer_section_2">
 				<div class="row">
 					<div class="col-sm-4 col-lg-2">
-						<p class="dummy_text"> ipsum dolor sit amet, consectetur ipsum dolor sit amet, consectetur ipsum
-							dolor sit amet,</p>
+						<p class="dummy_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam</p>
 					</div>
 					<div class="col-sm-4 col-lg-2">
-						<h2 class="shop_text">Address </h2>
-						<div class="image-icon"><img src="../images/map-icon.png"><span class="pet_text">No 40 Baria
-								Sreet
-								15/2 NewYork City, NY, United States.</span></div>
+						<h2 class="shop_text">Địa chỉ</h2>
+						<div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn
+								Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
 					</div>
 					<div class="col-sm-4 col-md-6 col-lg-3">
-						<h2 class="shop_text">Our Company </h2>
+						<h2 class="shop_text">Công ty của chúng tôi</h2>
 						<div class="delivery_text">
 							<ul>
-								<li>Delivery</li>
+								<li>Giao hàng</li>
 								<li>Legal Notice</li>
-								<li>About us</li>
-								<li>Secure payment</li>
-								<li>Contact us</li>
+								<li>Về chúng tôi</li>
+								<li>Thanh toán an toàn</li>
+								<li>Liên hệ với chúng tôi</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
-						<h2 class="adderess_text">Products</h2>
+						<h2 class="adderess_text">Sản phẩm</h2>
 						<div class="delivery_text">
 							<ul>
-								<li>Prices drop</li>
-								<li>New products</li>
-								<li>Best sales</li>
-								<li>Contact us</li>
+								<li>Giảm giá</li>
+								<li>Sản phẩm mới</li>
+								<li>Sản phẩm bán chạy nhất</li>
+								<li>Liên hệ với chúng tôi</li>
 								<li>Sitemap</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-sm-6 col-lg-2">
-						<h2 class="adderess_text">Newsletter</h2>
+						<h2 class="adderess_text">Bản tin</h2>
 						<div class="form-group">
-							<input type="text" class="enter_email" placeholder="Enter Your email" name="Name">
+							<input type="text" class="enter_email" placeholder="Nhập email" name="Name">
 						</div>
-						<button class="subscribr_bt">Subscribe</button>
+						<button class="subscribr_bt">Đăng kí</button>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	</div>
-
 	<!-- section footer end -->
 	<div class="copyright">Group 2</div>
 
