--- a/blogs.html
+++ b/blogs.html
@@ -128,6 +128,31 @@
 			</div>
 		</div>
 	</div>
+	<div class="about_main layout_padding">
+		<div class="collection_section">
+			<div class="container">
+				<h1 class="new_text"><strong>Outlet là gì? Giày Outlet là gì? Tại sao nên mua giày outlet tại Vũ trụ Sneaker? </strong></h1>
+				<p class="consectetur_text">Outlet là một từ tiếng Anh; khi dịch sang tiếng Việt, nó có rất nhiều nghĩa tùy thuộc vào từng hoàn cảnh khác nhau.</p>
+			</div>
+		</div>
+		<div class="collectipn_section_3 layout_padding">
+			<div class="container">
+				<div class="racing_shoes">
+					<div class="row">
+						<div class="col-md-8">
+							<div class="shoes-img3"><img src="images/shoes-img1.png" alt=""></div>
+						</div>
+						<div class="col-md-4">
+							<div class="sale_text"><strong>Mua <br><span style="color: #0a0506;">Giày Outlet</span>
+									<br></strong></div>
+							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
+							<button class="seemore"> <a href="blogs/blogOutletGiay-Vutrusneaker.html">XEM THÊM</a></button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- new collection section end -->
 	<!-- section footer start -->
 	<div class="section_footer">
