--- a/blogs.html
+++ b/blogs.html
@@ -76,7 +76,7 @@
 			<div class="container">
 				<h1 class="new_text"><strong>Top 3 đôi giày nữ có thể phối mọi outfit</strong></h1>
 				<p class="consectetur_text">Giày nữ không chỉ đơn giản là một món đồ dùng để bảo vệ đôi chân. Đây còn
-					được xem như một món trang sức không thể thiếu trong tủ đồ của mỗi cô nàng. Và TrendyLady sẽ gợi ý
+					được xem như một món trang sức không thể thiếu trong tủ đồ của mỗi cô nàng. Và <a href="https://l.messenger.com/l.php?u=https%3A%2F%2Ftrendylady.shop%2F&h=AT1DHk8zvwoDLxulh8IyDKGuU1i5MA_g-gR6fO_j8MWeQX6d0eLNbzzpI2EF6Dpoz7kDM-JdnG86bqYniA_W_U1cyPsdURvkpvXbRMuSyt3qaPntaB5BW3Qa0mrV_LjjvqmVDA">TrendyLady</a> sẽ gợi ý
 					cho nàng top 3 đôi giày nữ đỉnh nhất mà nàng nên đầu tư.</p>
 			</div>
 		</div>
@@ -104,6 +104,7 @@
 		<div class="collection_section">
 			<div class="container">
 				<h1 class="new_text"><strong>Outlet là gì - Kinh nghiệm mua hàng outlet ở Nhật </strong></h1>
+				<h2><a href="https://l.messenger.com/l.php?u=https%3A%2F%2Fblog.jpculture.asia%2Foutlet-la-gi-kinh-nghiem-mua-hang-outlet-o-nhat%2F%3Ffbclid%3DIwAR0bnct0VF1CMxptLGGH0O-Pbzak6kWYrJu_Ds1WjVqY-j0ISxLOLIrJMYs&h=AT1DHk8zvwoDLxulh8IyDKGuU1i5MA_g-gR6fO_j8MWeQX6d0eLNbzzpI2EF6Dpoz7kDM-JdnG86bqYniA_W_U1cyPsdURvkpvXbRMuSyt3qaPntaB5BW3Qa0mrV_LjjvqmVDA">Văn hóa Nhật Bản</a></h2>
 				<p class="consectetur_text">Ở Nhật Bản nói riêng và toàn thế giới nói chung, đối với các tín đồ ham mê
 					mua sắm cũng như yêu thích các thương hiệu nổi tiếng, nhưng lại không dư giả về mặt tài chính, chắc
 					chắn sẽ biết tới Outlet. Outlet là trung tâm mua sắm, nơi tập hợp hàng ngàn các thương hiệu nổi
