--- a/blogs/blogOutletGiay-Vutrusneaker.html
+++ b/blogs/blogOutletGiay-Vutrusneaker.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>Racing Boot</title>
+	<title>Outlet là gì? Giày Outlet là gì? Tại sao nên mua giày outlet tại Vũ trụ Sneaker?</title>
 	<meta name="keywords" content="Vũ trụ Sneaker">
 	<meta name="description" content="Vũ trụ Sneaker bán mọi loại giày. Chuyên giày outlet">
 	<meta name="author" content="Vũ trụ Sneaker Corporation">
