--- a/giay-sneaker.html
+++ b/giay-sneaker.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>Shoes</title>
+    <title>Vũ trụ Sneaker | Sneakers</title>
     <meta name="keywords" content="Vũ trụ Sneaker">
     <meta name="description" content="Vũ trụ Sneaker bán mọi loại giày. Chuyên giày outlet">
     <meta name="author" content="Vũ trụ Sneaker Corporation">
@@ -20,14 +20,14 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="css/responsive.css">
     <!-- fevicon -->
-<!--     <link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
+    <!--     <link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
     <!-- Scrollbar Custom CSS -->
-<!--     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css"> -->
+    <!--     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css"> -->
     <!-- Tweaks for older IEs-->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <!-- owl stylesheets -->
-<!--     <link rel="stylesheet" href="css/owl.carousel.min.css"> -->
-<!--     <link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
+    <!--     <link rel="stylesheet" href="css/owl.carousel.min.css"> -->
+    <!--     <link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
         media="screen">
     <!--Canonical-->
@@ -56,12 +56,13 @@
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav">
                                 <a class="nav-item nav-link" href="index.html">Trang chủ</a>
-                                <a class="nav-item nav-link" href="collection.html">Bộ sưu tập</a>
-                                <a class="nav-item nav-link" href="shoes.html">Sản phẩm</a>
+                                <a class="nav-item nav-link" href="bo-sieu-tap.html">Bộ sưu tập</a>
+                                <a class="nav-item nav-link" href="giay-sneaker.html">Sản phẩm</a>
                                 <a class="nav-item nav-link" href="blogs.html">Blogs</a>
-                                <a class="nav-item nav-link" href="contact.html">Liên hệ</a>
-                                <a class="nav-item nav-link last" href="#"><img src="images/search_icon.png" alt="cong-cu-tim-kiem"></a>
-                                <a class="nav-item nav-link last" href="contact.html"><img
+                                <a class="nav-item nav-link" href="lien-he-voi-chung-toi.html">Liên hệ</a>
+                                <a class="nav-item nav-link last" href="#"><img src="images/search_icon.png"
+                                        alt="Cong-cu-tim-kiem"></a>
+                                <a class="nav-item nav-link last" href="lien-he-voi-chung-toi.html"><img
                                         src="images/shop_icon.png" alt="shop"></a>
                             </div>
                         </div>
@@ -246,7 +247,8 @@
                     </div>
                     <div class="col-sm-4 col-lg-2">
                         <h2 class="shop_text">Địa chỉ</h2>
-                        <div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn Thuyên,
+                        <div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn
+                                Thuyên,
                                 khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
                     </div>
                     <div class="col-sm-4 col-md-6 col-lg-3">
@@ -284,7 +286,7 @@
             </div>
         </div>
     </div>
-<!--     </div> -->
+    <!--     </div> -->
     <!-- section footer end -->
     <div class="copyright">Group 2</div>
 
@@ -299,7 +301,7 @@
     <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/custom.js"></script>
     <!-- javascript -->
-<!--     <script src="js/owl.carousel.js"></script> -->
+    <!--     <script src="js/owl.carousel.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
     <script>
         $(document).ready(function () {
