--- a/blogs.html
+++ b/blogs.html
@@ -54,20 +54,21 @@
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
 								<a class="nav-item nav-link" href="index.html">Trang chủ</a>
-								<a class="nav-item nav-link" href="collection.html">Bộ sưu tập</a>
-								<a class="nav-item nav-link" href="shoes.html">Sản phẩm</a>
+								<a class="nav-item nav-link" href="bo-sieu-tap.html">Bộ sưu tập</a>
+								<a class="nav-item nav-link" href="giay-sneaker.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="blogs.html">Blogs</a>
-								<a class="nav-item nav-link" href="contact.html">Liên hệ</a>
+								<a class="nav-item nav-link" href="lien-he-voi-chung-toi.html">Liên hệ</a>
 								<a class="nav-item nav-link last" href="#"><img src="images/search_icon.png"
-										alt="cong-cu-tim-kiem"></a>
-								<a class="nav-item nav-link last" href="contact.html"><img src="images/shop_icon.png"
-										alt="shop"></a>
+										alt="Cong-cu-tim-kiem"></a>
+								<a class="nav-item nav-link last" href="lien-he-voi-chung-toi.html"><img
+										src="images/shop_icon.png" alt="shop"></a>
 							</div>
 						</div>
-					</nav>
 				</div>
+				</nav>
 			</div>
 		</div>
+	</div>
 	</div>
 	<!-- new collection section start -->
 	<div class="collection_text">Blog Giày</div>
@@ -76,7 +77,8 @@
 			<div class="container">
 				<h1 class="new_text"><strong>Top 3 đôi giày nữ có thể phối mọi outfit</strong></h1>
 				<p class="consectetur_text">Giày nữ không chỉ đơn giản là một món đồ dùng để bảo vệ đôi chân. Đây còn
-					được xem như một món trang sức không thể thiếu trong tủ đồ của mỗi cô nàng. Và <a href="https://trendylady.shop/">TrendyLady</a> sẽ gợi ý
+					được xem như một món trang sức không thể thiếu trong tủ đồ của mỗi cô nàng. Và <a
+						href="https://trendylady.shop/">TrendyLady</a> sẽ gợi ý
 					cho nàng top 3 đôi giày nữ đỉnh nhất mà nàng nên đầu tư.</p>
 			</div>
 		</div>
@@ -92,7 +94,7 @@
 										nữ</span>
 									<br></strong></div>
 							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
-							<button class="seemore"> <a href="blogs/blogOuletGiay-1-top-3-giay-phoi-moi-out-fit.html">XEM THÊM</a></button>
+							<button class="seemore"> <a href="blogs/blog-top3-giay-nu.html">XEM THÊM</a></button>
 						</div>
 					</div>
 				</div>
@@ -104,7 +106,8 @@
 		<div class="collection_section">
 			<div class="container">
 				<h1 class="new_text"><strong>Outlet là gì - Kinh nghiệm mua hàng outlet ở Nhật </strong></h1>
-				<h2><a href="https://blog.jpculture.asia/outlet-la-gi-kinh-nghiem-mua-hang-outlet-o-nhat/">Văn hóa Nhật Bản</a></h2>
+				<h2><a href="https://blog.jpculture.asia/outlet-la-gi-kinh-nghiem-mua-hang-outlet-o-nhat/">Văn hóa Nhật
+						Bản</a></h2>
 				<p class="consectetur_text">Ở Nhật Bản nói riêng và toàn thế giới nói chung, đối với các tín đồ ham mê
 					mua sắm cũng như yêu thích các thương hiệu nổi tiếng, nhưng lại không dư giả về mặt tài chính, chắc
 					chắn sẽ biết tới Outlet. Outlet là trung tâm mua sắm, nơi tập hợp hàng ngàn các thương hiệu nổi
@@ -122,7 +125,7 @@
 							<div class="sale_text"><strong>Sneaker <br><span style="color: #0a0506;">Outlet</span>
 									<br></strong></div>
 							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
-							<button class="seemore"> <a href="blogs/blogOutletGiay-2.html">XEM THÊM</a></button>
+							<button class="seemore"> <a href="blogs/blog-outlet-la-gi.html">XEM THÊM</a></button>
 						</div>
 					</div>
 				</div>
@@ -132,8 +135,10 @@
 	<div class="about_main layout_padding">
 		<div class="collection_section">
 			<div class="container">
-				<h1 class="new_text"><strong>Outlet là gì? Giày Outlet là gì? Tại sao nên mua giày outlet tại Vũ trụ Sneaker? </strong></h1>
-				<p class="consectetur_text">Outlet là một từ tiếng Anh; khi dịch sang tiếng Việt, nó có rất nhiều nghĩa tùy thuộc vào từng hoàn cảnh khác nhau.</p>
+				<h1 class="new_text"><strong>Outlet là gì? Giày Outlet là gì? Tại sao nên mua giày outlet tại Vũ trụ
+						Sneaker? </strong></h1>
+				<p class="consectetur_text">Outlet là một từ tiếng Anh; khi dịch sang tiếng Việt, nó có rất nhiều nghĩa
+					tùy thuộc vào từng hoàn cảnh khác nhau.</p>
 			</div>
 		</div>
 		<div class="collectipn_section_3 layout_padding">
@@ -147,7 +152,8 @@
 							<div class="sale_text"><strong>Mua <br><span style="color: #0a0506;">Giày Outlet</span>
 									<br></strong></div>
 							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
-							<button class="seemore"> <a href="blogs/blogOutletGiay-Vutrusneaker.html">XEM THÊM</a></button>
+							<button class="seemore"> <a href="blogs/blog-mua-giay-outlet.html">XEM
+									THÊM</a></button>
 						</div>
 					</div>
 				</div>
