--- a/blogs/blog-mua-giay-outlet.html
+++ b/blogs/blog-mua-giay-outlet.html
@@ -73,33 +73,67 @@
 	<div class="about_main layout_padding">
 		<div class="collection_section">
 			<div class="container">
-				<h1 class="new_text"><strong>Outlet là gì? Giày Outlet là gì? Tại sao nên mua giày outlet tại Vũ trụ Sneaker?</strong></h1>
-				<h2 class="new_text" ><strong>1. Outlet là gì</strong></h2>
-				<p class="consectetur_text">Outlet là một từ tiếng Anh; khi dịch sang tiếng Việt, nó có rất nhiều nghĩa tùy thuộc vào từng hoàn cảnh khác nhau. Ví dụ trong lĩnh vực cơ điện tử, outlet có nghĩa là cửa xả. Trong lĩnh vực ô tô thì nó được hiểu là ống bô xả khói. Hay trong lĩnh vực dân dụng, outlet có nghĩa là chỗ cắm điện,…
-					Outlet được dùng phổ biến nhất vẫn là trong kinh doanh. Lúc này, nó được dùng để chỉ những cửa hàng chuyên tiêu thụ các sản phẩm tồn kho, hàng lỗi thời, hết mốt hoặc hàng giảm giá. Những sản phẩm này đều do công ty sản xuất bán lẻ trực tiếp đến tay người dùng mà không qua bất kỳ cửa hàng trung gian nào. 
+				<h1 class="new_text"><strong>Outlet là gì? Giày Outlet là gì? Tại sao nên mua giày outlet tại Vũ trụ
+						Sneaker?</strong></h1>
+				<h2 class="new_text"><strong>1. Outlet là gì</strong></h2>
+				<p class="consectetur_text">Outlet là một từ tiếng Anh; khi dịch sang tiếng Việt, nó có rất nhiều nghĩa
+					tùy thuộc vào từng hoàn cảnh khác nhau. Ví dụ trong lĩnh vực cơ điện tử, outlet có nghĩa là cửa xả.
+					Trong lĩnh vực ô tô thì nó được hiểu là ống bô xả khói. Hay trong lĩnh vực dân dụng, outlet có nghĩa
+					là chỗ cắm điện,…
+					Outlet được dùng phổ biến nhất vẫn là trong kinh doanh. Lúc này, nó được dùng để chỉ những cửa hàng
+					chuyên tiêu thụ các sản phẩm tồn kho, hàng lỗi thời, hết mốt hoặc hàng giảm giá. Những sản phẩm này
+					đều do công ty sản xuất bán lẻ trực tiếp đến tay người dùng mà không qua bất kỳ cửa hàng trung gian
+					nào.
 				</p>
 				<h2 class="new_text"><strong>2. Giày outlet là gì</strong></h2>
-				<p class="consectetur_text">Hàng outlet thường là các sản phẩm đến từ các thương hiệu nổi tiếng trên thế giới. Tuy nhiên, do xu thế mới cập nhật quá nhanh, nhiều mẫu mã mới được tung ra thị trường nên các mẫu cũ trở nên lỗi mốt, không còn đủ size hoặc không được nhà sản xuất sản xuất thêm. Hoặc cũng có thể trong quá trình sản xuất gặp một vài lỗi nhỏ nên sản phẩm không đảm bảo chất lượng so với các sản phẩm khác. Bởi vậy mà giá bán của các mặt hàng này khá rẻ, giảm khá nhiều so với mức giá đã định. </p>
-                <p class="consectetur_text">Hàng outlet giải quyết được nhiều vấn đề cho cả nhà sản xuất và người tiêu dùng. Nó giúp người dùng có cơ hội sở hữu hàng hiệu với mức giá rẻ mà vẫn đảm bảo chất lượng và thỏa mãn “cơn khát” mua sắm. Về phía công ty sản xuất, nó giúp họ có thể giải quyết các sản phẩm tồn kho, bị hết mùa hoặc bị lỗi. Điều này có ý nghĩa cực kỳ quan trọng đối với các nhà sản xuất. </p>
-                <p class="consectetur_text">Cửa hàng outlet ra đời lần đầu tiên vào khoảng thập niên 1930 tại khu vực miền Đông của nước Mỹ. Ban đầu, chúng được các nhà máy đề nghị để bán các mặt hàng lỗi mốt hoặc bị lỗi cho nhân viên với mức giá rẻ. Sau đó, hình thức kinh doanh này cũng được mở rộng ra cho cả những người bên ngoài. Dần dần, nó lan sang các quốc gia như Nhật Bản, Hàn Quốc,… Tại Việt Nam, cũng xuất hiện một số cửa hàng outlet nhưng số lượng không nhiều.  </p>
-                <div><img src="../images/outletstore.png" alt=""></div>
+				<p class="consectetur_text">Hàng outlet thường là các sản phẩm đến từ các thương hiệu nổi tiếng trên thế
+					giới. Tuy nhiên, do xu thế mới cập nhật quá nhanh, nhiều mẫu mã mới được tung ra thị trường nên các
+					mẫu cũ trở nên lỗi mốt, không còn đủ size hoặc không được nhà sản xuất sản xuất thêm. Hoặc cũng có
+					thể trong quá trình sản xuất gặp một vài lỗi nhỏ nên sản phẩm không đảm bảo chất lượng so với các
+					sản phẩm khác. Bởi vậy mà giá bán của các mặt hàng này khá rẻ, giảm khá nhiều so với mức giá đã
+					định. </p>
+				<p class="consectetur_text">Hàng outlet giải quyết được nhiều vấn đề cho cả nhà sản xuất và người tiêu
+					dùng. Nó giúp người dùng có cơ hội sở hữu hàng hiệu với mức giá rẻ mà vẫn đảm bảo chất lượng và thỏa
+					mãn “cơn khát” mua sắm. Về phía công ty sản xuất, nó giúp họ có thể giải quyết các sản phẩm tồn kho,
+					bị hết mùa hoặc bị lỗi. Điều này có ý nghĩa cực kỳ quan trọng đối với các nhà sản xuất. </p>
+				<p class="consectetur_text">Cửa hàng outlet ra đời lần đầu tiên vào khoảng thập niên 1930 tại khu vực
+					miền Đông của nước Mỹ. Ban đầu, chúng được các nhà máy đề nghị để bán các mặt hàng lỗi mốt hoặc bị
+					lỗi cho nhân viên với mức giá rẻ. Sau đó, hình thức kinh doanh này cũng được mở rộng ra cho cả những
+					người bên ngoài. Dần dần, nó lan sang các quốc gia như Nhật Bản, Hàn Quốc,… Tại Việt Nam, cũng xuất
+					hiện một số cửa hàng outlet nhưng số lượng không nhiều. </p>
+				<div><img src="../images/outletstore.png" alt=""></div>
 				<h2 class="new_text"><strong>3. Ưu và nhược điểm khi mua giày outlet</strong></h2>
-                <h3 class="new_text">Ưu điểm</h3>
-                <p class="consectetur_text">Giá thành rẻ: Bạn có thể sở hữu sản phẩm có chất lượng gần như không khác những mặt hàng bình thường, nhưng đôi lúc giá chỉ bằng 50% so với mức giá bán ra ban đầu.  </p>
-                <p class="consectetur_text">Mẫu mã đa dạng: Tại các outlet store, bạn cũng có thể tìm mua sản phẩm đã ngưng sản xuất hay bị hạn chế ở một số khu vực.  </p>
-                <p class="consectetur_text">Các mặt hàng thuộc thương hiệu nổi tiếng</p>
-      	        <h3 class="new_text">Nhược điểm</h3>
-      			<p class="consectetur_text">Lỗi thời: Là mặt hàng tồn kho, tất nhiên không thể tránh khỏi tình trạng lỗi mốt. Nếu không quá quan tâm đến tính thẩm mỹ, thì hàng outlet không phải là một lựa chọn tồi.</p>
-      			<p class="consectetur_text">Hàng bị lỗi: Không chỉ những bộ trang phục, mà còn cả thiết bị điện tử. Hàng bị lỗi sẽ có thời gian sử dụng ngắn hơn, máy móc dễ hỏng hóc.</p>
-      			<p class="consectetur_text">Hạn chế về size: Không phải ai cũng tìm được sản phẩm phù hợp với size của mình, đôi khi outlet sẽ thường có những size giày khó bán.</p>
-      			<h2 class="new_text"><strong>4. Tại sao nên mua giày outlet tại Vũ trụ Sneaker?</strong></h2>
-      			<p class="consectetur_text">Với những ưu điểm và nhược điểm đã được Vũ trụ Sneaker trình bày ở trên, chắc hẳn các bạn cũng đang cân nhắc hoặc muốn mua một đôi giày outlet cho mình đúng không nào. Tuy nhiên, bạn không biết nơi nào mua giày outlet uy tín hay chế độ hậu đãi tốt nhất trên thị trường? Hãy đến ngay với Vũ trụ Sneaker nơi chuyên bán giày Outlet với các lí do sau:</p>
-      			<ul class="blog_li">
-  					<li>Vũ trụ Sneaker là cửa hàng giày reseller của các hãng thời trang chính hãng như Nike, Adidas,.. Mang trong mình trọng trách mang đến cho các bạn những sản phẩm giày, đặc biệt là giày outlet chất lượng, chính hãng, giá rẽ nhất trên thị trường.</li>
-  					<li>Chế độ hậu mãi sau khi mua hàng của Vũ trụ Sneaker là thứ hai không ai xưng chủ nhật!! Với bảo hành trọn đời keo chỉ lên đến 2 năm, đổi trả trong vòng 30 ngày nếu sản phẩm lỗi và với 7 ngày nếu không hài lòng về sản phẩm cùng hàng ngàn chế độ hậu mãi khác.</li>
-  					<li>Bên cạnh đó, Vũ trụ Sneaker luôn lắng nghe và hỗ trợ khách hàng 24/7, cùng hàng ngàn quà tặng đối với các hạng thành viên. Nhiều ưu đãi mỗi dịp sinh nhật của khác hàng cùng với các dịp lễ lớn. </li>
-				</ul>  
-     			<p class="consectetur_text">Qua một số thông tin trên, Vũ trụ Sneaker hy vọng bạn đã có cái nhìn tổng quan hơn về giày outlet và đưa ra lựa chọn đúng đắn cho mình nhé! </p>
+				<h3 class="new_text">Ưu điểm</h3>
+				<p class="consectetur_text">Giá thành rẻ: Bạn có thể sở hữu sản phẩm có chất lượng gần như không khác
+					những mặt hàng bình thường, nhưng đôi lúc giá chỉ bằng 50% so với mức giá bán ra ban đầu. </p>
+				<p class="consectetur_text">Mẫu mã đa dạng: Tại các outlet store, bạn cũng có thể tìm mua sản phẩm đã
+					ngưng sản xuất hay bị hạn chế ở một số khu vực. </p>
+				<p class="consectetur_text">Các mặt hàng thuộc thương hiệu nổi tiếng</p>
+				<h3 class="new_text">Nhược điểm</h3>
+				<p class="consectetur_text">Lỗi thời: Là mặt hàng tồn kho, tất nhiên không thể tránh khỏi tình trạng lỗi
+					mốt. Nếu không quá quan tâm đến tính thẩm mỹ, thì hàng outlet không phải là một lựa chọn tồi.</p>
+				<p class="consectetur_text">Hàng bị lỗi: Không chỉ những bộ trang phục, mà còn cả thiết bị điện tử. Hàng
+					bị lỗi sẽ có thời gian sử dụng ngắn hơn, máy móc dễ hỏng hóc.</p>
+				<p class="consectetur_text">Hạn chế về size: Không phải ai cũng tìm được sản phẩm phù hợp với size của
+					mình, đôi khi outlet sẽ thường có những size giày khó bán.</p>
+				<h2 class="new_text"><strong>4. Tại sao nên mua giày outlet tại Vũ trụ Sneaker?</strong></h2>
+				<p class="consectetur_text">Với những ưu điểm và nhược điểm đã được Vũ trụ Sneaker trình bày ở trên,
+					chắc hẳn các bạn cũng đang cân nhắc hoặc muốn mua một đôi giày outlet cho mình đúng không nào. Tuy
+					nhiên, bạn không biết nơi nào mua giày outlet uy tín hay chế độ hậu đãi tốt nhất trên thị trường?
+					Hãy đến ngay với Vũ trụ Sneaker nơi chuyên bán giày Outlet với các lí do sau:</p>
+				<ul class="blog_li">
+					<li>Vũ trụ Sneaker là cửa hàng giày reseller của các hãng thời trang chính hãng như Nike, Adidas,..
+						Mang trong mình trọng trách mang đến cho các bạn những sản phẩm giày, đặc biệt là giày outlet
+						chất lượng, chính hãng, giá rẽ nhất trên thị trường.</li>
+					<li>Chế độ hậu mãi sau khi mua hàng của Vũ trụ Sneaker là thứ hai không ai xưng chủ nhật!! Với bảo
+						hành trọn đời keo chỉ lên đến 2 năm, đổi trả trong vòng 30 ngày nếu sản phẩm lỗi và với 7 ngày
+						nếu không hài lòng về sản phẩm cùng hàng ngàn chế độ hậu mãi khác.</li>
+					<li>Bên cạnh đó, Vũ trụ Sneaker luôn lắng nghe và hỗ trợ khách hàng 24/7, cùng hàng ngàn quà tặng
+						đối với các hạng thành viên. Nhiều ưu đãi mỗi dịp sinh nhật của khác hàng cùng với các dịp lễ
+						lớn. </li>
+				</ul>
+				<p class="consectetur_text">Qua một số thông tin trên, Vũ trụ Sneaker hy vọng bạn đã có cái nhìn tổng
+					quan hơn về giày outlet và đưa ra lựa chọn đúng đắn cho mình nhé! </p>
 			</div>
 		</div>
 
@@ -141,7 +175,8 @@
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
-						<div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
+						<div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn
+								Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
 					</div>
 					<div class="col-sm-4 col-md-6 col-lg-3">
 						<h2 class="shop_text">Công ty của chúng tôi</h2>
@@ -178,7 +213,7 @@
 			</div>
 		</div>
 	</div>
-<!-- 	</div> -->
+	<!-- 	</div> -->
 	<!-- section footer end -->
 	<div class="copyright">Group 2</div>
 
@@ -193,7 +228,7 @@
 	<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 	<script src="js/custom.js"></script>
 	<!-- javascript -->
-<!-- 	<script src="js/owl.carousel.js"></script> -->
+	<!-- 	<script src="js/owl.carousel.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 	<script>
 		$(document).ready(function () {
@@ -226,7 +261,7 @@
 					$(this).off("touchmove");
 				});
 			});
-        });
+		});
 	</script>
 </body>
 
