--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 	<!-- Responsive-->
 	<link rel="stylesheet" href="css/responsive.css">
 	<!-- fevicon -->
-<!-- 	<link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
+	<!-- 	<link rel="icon" href="images/fevicon.png" type="image/gif" /> -->
 	<!-- Scrollbar Custom CSS -->
-<!-- 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css"> -->
+	<!-- 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css"> -->
 	<!-- Tweaks for older IEs-->
 	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 	<!-- owl stylesheets -->
-<!-- 	<link rel="stylesheet" href="css/owl.carousel.min.css"> -->
-<!-- 	<link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
+	<!-- 	<link rel="stylesheet" href="css/owl.carousel.min.css"> -->
+	<!-- 	<link rel="stylesheet" href="css/owl.theme.default.min.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
 		media="screen">
 	<!--[if lt IE 9]>
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-3">
-					<div class="logo"><a href="#"><img src="images/logo.png" alt="Vu-Tru-Sneaker"></a></div>
+					<div class="logo"><a href=""><img src="images/logo.png" alt="Vu-Tru-Sneaker"></a></div>
 				</div>
 				<div class="col-sm-9">
 					<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -54,12 +54,13 @@
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
 								<a class="nav-item nav-link" href="index.html">Trang chủ</a>
-								<a class="nav-item nav-link" href="collection.html">Bộ sưu tập</a>
-								<a class="nav-item nav-link" href="shoes.html">Sản phẩm</a>
+								<a class="nav-item nav-link" href="bo-sieu-tap.html">Bộ sưu tập</a>
+								<a class="nav-item nav-link" href="giay-sneaker.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="blogs.html">Blogs</a>
-								<a class="nav-item nav-link" href="contact.html">Liên hệ</a>
-								<a class="nav-item nav-link last" href="#"><img src="images/search_icon.png" alt="Cong-cu-tim-kiem"></a>
-								<a class="nav-item nav-link last" href="contact.html"><img
+								<a class="nav-item nav-link" href="lien-he-voi-chung-toi.html">Liên hệ</a>
+								<a class="nav-item nav-link last" href="#"><img src="images/search_icon.png"
+										alt="Cong-cu-tim-kiem"></a>
+								<a class="nav-item nav-link last" href="lien-he-voi-chung-toi.html"><img
 										src="images/shop_icon.png" alt="shop"></a>
 							</div>
 						</div>
@@ -93,7 +94,8 @@
 											<div class="banner_taital">
 												<h2 class="banner_text">Giày chạy bộ mới</h2>
 												<h2 class="mens_text"><strong>Men's Like Plex</strong></h2>
-												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá
+													rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
@@ -115,7 +117,8 @@
 											<div class="banner_taital">
 												<h2 class="banner_text">Giày chạy bộ mới</h2>
 												<h2 class="mens_text"><strong>Men's Like Plex</strong></h2>
-												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá
+													rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
@@ -137,7 +140,8 @@
 											<div class="banner_taital">
 												<h2 class="banner_text">Giày chạy bộ mới</h2>
 												<h2 class="mens_text"><strong>Men's Like Plex</strong></h2>
-												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá
+													rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
@@ -159,7 +163,8 @@
 											<div class="banner_taital">
 												<h2 class="banner_text">Giày chạy bộ mới</h2>
 												<h2 class="mens_text"><strong>Men's Like Plex</strong></h2>
-												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá rẻ nhất Việt Nam
+												<p class="lorem_text">Vũ trụ Sneaker chuyên giày outlet chính hãng giá
+													rẻ nhất Việt Nam
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
@@ -183,7 +188,8 @@
 	<div class="layout_padding collection_section">
 		<div class="container">
 			<h1 class="new_text"><strong>Sản phẩm mới</strong></h1>
-			<p class="consectetur_text">Dòng sản phẩm vừa mới ra mắt nhưng đã được những tín đồ sneaker phản hồi tích cực.</p>
+			<p class="consectetur_text">Dòng sản phẩm vừa mới ra mắt nhưng đã được những tín đồ sneaker phản hồi tích
+				cực.</p>
 			<div class="collection_section_2">
 				<div class="row">
 					<div class="col-md-6">
@@ -227,7 +233,8 @@
 	<div class="collection_section">
 		<div class="container">
 			<h1 class="new_text"><strong>Giày chạy đua</strong></h1>
-			<p class="consectetur_text">Một đôi giày chạy bộ siêu nhẹ được thiết kế cho những cuộc đua với phần đệm vô cùng chắc chắn và có khả năng hấp thụ va đập.</p>
+			<p class="consectetur_text">Một đôi giày chạy bộ siêu nhẹ được thiết kế cho những cuộc đua với phần đệm vô
+				cùng chắc chắn và có khả năng hấp thụ va đập.</p>
 		</div>
 	</div>
 	<div class="collectipn_section_3 layuot_padding">
@@ -250,7 +257,8 @@
 	<div class="collection_section layout_padding">
 		<div class="container">
 			<h1 class="new_text"><strong>Sản phẩm mới về</strong></h1>
-			<p class="consectetur_text">Nếu bạn có nhu cầu về những sản phẩm khác hãy liên hệ Vũ Trụ Sneaker để cập nhật hoặc hỏi mẫu và size giày nhé.</p>
+			<p class="consectetur_text">Nếu bạn có nhu cầu về những sản phẩm khác hãy liên hệ Vũ Trụ Sneaker để cập nhật
+				hoặc hỏi mẫu và size giày nhé.</p>
 		</div>
 	</div>
 	<!-- new collection section end -->
@@ -398,8 +406,8 @@
 					<div class="email_box">
 						<div class="input_main">
 							<div class="container">
-								<form >
-<!-- 									/action="action_page.php" -->
+								<form>
+									<!-- 									/action="action_page.php" -->
 									<div class="form-group">
 										<input type="text" class="email-bt" placeholder="Họ và tên" name="Name">
 									</div>
@@ -469,7 +477,8 @@
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
-						<div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn Thuyên,
+						<div class="image-icon"><img src="images/map-icon.png" alt=""><span class="pet_text">Đường Hàn
+								Thuyên,
 								khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
 					</div>
 					<div class="col-sm-4 col-md-6 col-lg-3">
@@ -507,7 +516,7 @@
 			</div>
 		</div>
 	</div>
-<!-- 	</div> -->
+	<!-- 	</div> -->
 	<!-- section footer end -->
 	<div class="copyright">Group 2</div>
 
@@ -522,7 +531,7 @@
 	<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 	<script src="js/custom.js"></script>
 	<!-- javascript -->
-<!-- 	<script src="js/owl.carousel.js"></script> -->
+	<!-- 	<script src="js/owl.carousel.js"></script> -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 	<script>
 		$(document).ready(function () {
