--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>Blog Giày</title>
+	<title>Vũ trụ Sneaker | Blogs</title>
 	<meta name="keywords" content="Vũ trụ Sneaker">
 	<meta name="description" content="Vũ trụ Sneaker bán mọi loại giày. Chuyên giày outlet">
 	<meta name="author" content="Vũ trụ Sneaker Corporation">
