--- a/giay-sneaker.html
+++ b/giay-sneaker.html
@@ -97,7 +97,7 @@
                                 </ul>
                             </div>
                             <div class="right_part">
-                                <div class="shoes_price">$ <span style="color: #ff4e5b;">60</span></div>
+                                <div class="shoes_price"> <span style="color: #ff4e5b;">100.000 vnd</span></div>
                             </div>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                                 </ul>
                             </div>
                             <div class="right_part">
-                                <div class="shoes_price">$ <span style="color: #ff4e5b;">400</span></div>
+                                <div class="shoes_price"> <span style="color: #ff4e5b;">800.000 vnd</span></div>
                             </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                                 </ul>
                             </div>
                             <div class="right_part">
-                                <div class="shoes_price">$ <span style="color: #ff4e5b;">50</span></div>
+                                <div class="shoes_price"> <span style="color: #ff4e5b;">1.111.000 vnd</span></div>
                             </div>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                                 </ul>
                             </div>
                             <div class="right_part">
-                                <div class="shoes_price">$ <span style="color: #ff4e5b;">70</span></div>
+                                <div class="shoes_price"> <span style="color: #ff4e5b;">2.100.000 vnd</span></div>
                             </div>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                                 </ul>
                             </div>
                             <div class="right_part">
-                                <div class="shoes_price">$ <span style="color: #ff4e5b;">100</span></div>
+                                <div class="shoes_price"> <span style="color: #ff4e5b;">2.000.000 vnd</span></div>
                             </div>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
                                 </ul>
                             </div>
                             <div class="right_part">
-                                <div class="shoes_price">$ <span style="color: #ff4e5b;">90</span></div>
+                                <div class="shoes_price"> <span style="color: #ff4e5b;">1.200.000 vnd</span></div>
                             </div>
                         </div>
                     </div>
