--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 							<button class="new_bt">New</button>
 							<div class="shoes-img"><img src="images/shoes-img1.png" alt=""></div>
 							<p class="sport_text">Giày thể thao nam</p>
-							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
+							<div class="dolar_text"><strong style="color: #f12a47;">2.000.000 vnd</strong> </div>
 							<div class="star_icon">
 								<ul>
 									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
@@ -214,7 +214,7 @@
 						<div class="about-img2">
 							<div class="shoes-img2"><img src="images/shoes-img2.png" alt=""></div>
 							<p class="sport_text">Giày thể thao nam</p>
-							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
+							<div class="dolar_text"><strong style="color: #f12a47;">2.000.000 vnd</strong> </div>
 							<div class="star_icon">
 								<ul>
 									<li><a href="#"><img src="images/star-icon.png" alt=""></a></li>
@@ -247,7 +247,8 @@
 					<div class="col-md-4">
 						<div class="sale_text"><strong>Giảm giá<br><span style="color: #0a0506;">Giày</span>
 								<br>Đi Bộ</strong></div>
-						<div class="number_text"><strong>$ <span style="color: #0a0506">100</span></strong></div>
+						<div class="number_text"><strong> <span style="color: #0a0506">1.299.000 vnd</span></strong>
+						</div>
 						<button class="seemore">Xem thêm</button>
 					</div>
 				</div>
@@ -281,7 +282,7 @@
 								</ul>
 							</div>
 							<div class="right_part">
-								<div class="shoes_price">$ <span style="color: #ff4e5b;">60</span></div>
+								<div class="shoes_price"> <span style="color: #ff4e5b;">600.000 vnd</span></div>
 							</div>
 						</div>
 					</div>
@@ -301,7 +302,7 @@
 								</ul>
 							</div>
 							<div class="right_part">
-								<div class="shoes_price">$ <span style="color: #ff4e5b;">400</span></div>
+								<div class="shoes_price"> <span style="color: #ff4e5b;">400.000 vnd</span></div>
 							</div>
 						</div>
 					</div>
@@ -321,7 +322,7 @@
 								</ul>
 							</div>
 							<div class="right_part">
-								<div class="shoes_price">$ <span style="color: #ff4e5b;">50</span></div>
+								<div class="shoes_price"> <span style="color: #ff4e5b;">500.000 vnd</span></div>
 							</div>
 						</div>
 					</div>
@@ -343,7 +344,7 @@
 								</ul>
 							</div>
 							<div class="right_part">
-								<div class="shoes_price">$ <span style="color: #ff4e5b;">70</span></div>
+								<div class="shoes_price"> <span style="color: #ff4e5b;">1.999.000 vnd</span></div>
 							</div>
 						</div>
 					</div>
@@ -363,7 +364,7 @@
 								</ul>
 							</div>
 							<div class="right_part">
-								<div class="shoes_price">$ <span style="color: #ff4e5b;">100</span></div>
+								<div class="shoes_price"> <span style="color: #ff4e5b;">100.000 vnd</span></div>
 							</div>
 						</div>
 					</div>
@@ -383,7 +384,7 @@
 								</ul>
 							</div>
 							<div class="right_part">
-								<div class="shoes_price">$ <span style="color: #ff4e5b;">90</span></div>
+								<div class="shoes_price"> <span style="color: #ff4e5b;">1.900.000 vnd</span></div>
 							</div>
 						</div>
 					</div>
