--- a/blogs/blog-outlet-la-gi.html
+++ b/blogs/blog-outlet-la-gi.html
@@ -54,19 +54,21 @@
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
 								<a class="nav-item nav-link" href="../index.html">Trang chủ</a>
-								<a class="nav-item nav-link" href="../collection.html">Bộ sưu tập</a>
-								<a class="nav-item nav-link" href="../shoes.html">Sản phẩm</a>
+								<a class="nav-item nav-link" href="../bo-sieu-tap.html">Bộ sưu tập</a>
+								<a class="nav-item nav-link" href="../giay-sneaker.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="../blogs.html">Blogs</a>
-								<a class="nav-item nav-link" href="../contact.html">Liên hệ</a>
-								<a class="nav-item nav-link last" href="#"><img src="../images/search_icon.png"></a>
-								<a class="nav-item nav-link last" href="../contact.html"><img
-										src="../images/shop_icon.png"></a>
+								<a class="nav-item nav-link" href="../lien-he-voi-chung-toi.html">Liên hệ</a>
+								<a class="nav-item nav-link last" href="#"><img src="../images/search_icon.png"
+										alt="Cong-cu-tim-kiem"></a>
+								<a class="nav-item nav-link last" href="../lien-he-voi-chung-toi.html"><img
+										src="../images/shop_icon.png" alt="shop"></a>
 							</div>
 						</div>
-					</nav>
 				</div>
+				</nav>
 			</div>
 		</div>
+	</div>
 	</div>
 	<div class="site-content">
 
