--- a/blogs/blog-outlet-la-gi.html
+++ b/blogs/blog-outlet-la-gi.html
@@ -217,12 +217,12 @@
 						<div><a href="#"><img src="../images/footer-logo.png" alt=""></a></div>
 					</div>
 					<div class="col-sm-6 col-lg-2">
-						<div class="footer-logo"><img src="../images/phone-icon.png" alt=""><span class="map_text">(71)
-								1234567890</span></div>
+						<div class="footer-logo"><img src="images/phone-icon.png" alt=""><span class="map_text">(71)
+								0988709195</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
-						<div class="footer-logo"><img src="../images/email-icon.png" alt=""><span
-								class="map_text">Demo@gmail.com</span></div>
+						<div class="footer-logo"><img src="images/email-icon.png" alt=""><span
+								class="map_text">vutrusneaker@gmail.com</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
 						<div class="social_icon">
@@ -282,9 +282,6 @@
 			</div>
 		</div>
 	</div>
-	<!-- section footer end -->
-	<div class="copyright">Group 2</div>
-
 	<!-- section footer end -->
 	<div class="copyright">Group 2</div>
 
