--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 					</div>
 					<div class="col-sm-6 col-lg-3">
 						<div class="footer-logo"><img src="images/email-icon.png" alt=""><span
-								class="map_text">Demo@gmail.com</span></div>
+								class="map_text">vutrusneaker@gmail.com</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
 						<div class="social_icon">
