--- a/blogs/blog-top3-giay-nu.html
+++ b/blogs/blog-top3-giay-nu.html
@@ -204,12 +204,12 @@
 						<div><a href="#"><img src="../images/footer-logo.png" alt=""></a></div>
 					</div>
 					<div class="col-sm-6 col-lg-2">
-						<div class="footer-logo"><img src="../images/phone-icon.png" alt=""><span class="map_text">(71)
-								1234567890</span></div>
+						<div class="footer-logo"><img src="images/phone-icon.png" alt=""><span class="map_text">(71)
+								0988709195</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
-						<div class="footer-logo"><img src="../images/email-icon.png" alt=""><span
-								class="map_text">Demo@gmail.com</span></div>
+						<div class="footer-logo"><img src="images/email-icon.png" alt=""><span
+								class="map_text">vutrusneaker@gmail.com</span></div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
 						<div class="social_icon">
