--- a/blogs/blog-outlet-la-gi.html
+++ b/blogs/blog-outlet-la-gi.html
@@ -72,7 +72,7 @@
 	</div>
 	<div class="collection_section collection_section layout_padding">
 
-		<article class="article post tag-nghe-thuat image-small">
+		<article class="article post tag-nghe-thuat image-small container">
 
 			<header class="article-header gh-canvas">
 
@@ -87,6 +87,7 @@
 			</header>
 
 			<section class="gh-content gh-canvas">
+
 				<p><strong>Outlet là gì - Kinh nghiệm mua hàng outlet ở Nhật</strong></p>
 				<p>Ở Nhật Bản nói riêng và toàn thế giới nói chung, đối với các tín đồ ham mê mua sắm cũng như yêu
 					thích các thương hiệu nổi tiếng, nhưng lại không dư giả về mặt tài chính, chắc chắn sẽ biết tới
