--- a/blogs.html
+++ b/blogs.html
@@ -94,7 +94,7 @@
 										nữ</span>
 									<br></strong></div>
 							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
-							<button class="seemore"> <a href="blogs/blog-top3-giay-nu.html">XEM THÊM</a></button>
+							<button class="seemore"> <a href="blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html">XEM THÊM</a></button>
 						</div>
 					</div>
 				</div>
