--- a/blogs.html
+++ b/blogs.html
@@ -94,7 +94,8 @@
 										nữ</span>
 									<br></strong></div>
 							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
-							<button class="seemore"> <a href="blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html">XEM THÊM</a></button>
+							<button class="seemore"> <a href="blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html">XEM
+									THÊM</a></button>
 						</div>
 					</div>
 				</div>
@@ -125,7 +126,8 @@
 							<div class="sale_text"><strong>Sneaker <br><span style="color: #0a0506;">Outlet</span>
 									<br></strong></div>
 							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
-							<button class="seemore"> <a href="blogs/blog-outlet-la-gi.html">XEM THÊM</a></button>
+							<button class="seemore"> <a href="blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html">XEM
+									THÊM</a></button>
 						</div>
 					</div>
 				</div>
@@ -152,7 +154,8 @@
 							<div class="sale_text"><strong>Mua <br><span style="color: #0a0506;">Giày Outlet</span>
 									<br></strong></div>
 							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
-							<button class="seemore"> <a href="blogs/blog-mua-giay-outlet.html">XEM
+							<button class="seemore"> <a
+									href="blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html">XEM
 									THÊM</a></button>
 						</div>
 					</div>
