--- a/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html
+++ b/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html
@@ -135,7 +135,10 @@
 						lớn. </li>
 				</ul>
 				<p class="consectetur_text">Qua một số thông tin trên, Vũ trụ Sneaker hy vọng bạn đã có cái nhìn tổng
-					quan hơn về giày outlet và đưa ra lựa chọn đúng đắn cho mình nhé! </p>
+					quan hơn về giày outlet và đưa ra lựa chọn đúng đắn cho mình nhé! 
+				    <br>Linh bài viết: <a
+							href="https://www.vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html"> https://www.vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html</a>
+				</p>
 			</div>
 		</div>
 
