--- a/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html
+++ b/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html
@@ -193,6 +193,8 @@
 				</p>
 				<p><br>nguồn: <a
 						href="https://blog.jpculture.asia/outlet-la-gi-kinh-nghiem-mua-hang-outlet-o-nhat/">https://blog.jpculture.asia/outlet-la-gi-kinh-nghiem-mua-hang-outlet-o-nhat/</a>
+						<br>Linh bài viết: <a
+						href= "https://www.vutrusneaker.shop/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html"> https://www.vutrusneaker.shop/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html</a>
 				</p>
 			</section>
 
