--- a/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html
+++ b/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html
@@ -172,8 +172,12 @@
 					sai rồi nha. Bên cạnh những chiếc váy xuông nhẹ mang đến cảm giác nữ tính, bạn có thể lựa chọn một
 					công thức hiện đại hơn. Đó là mix quần ống đứng, quần ống loe kèm theo áo sơ mi, áo thun đơn giản
 					hoặc áo blazer là xong set đồ.<br><i>Đừng quên ghé vào TrendyLady thường xuyên để tìm hiểu thêm
-						nhiều mẹo phối đồ và cập nhật những xu hướng thời trang mới nhất nha.<br>Nguồn tham khảo: <a
-							href="https://trendylady.shop/top-3-doi-giay-nu-co-the-phoi-moi-outfit-re-va-dep-len-do-cuc-de-dang/">Top 3 đôi giày nữ có thể phối mọi outfit - TrendyLady</a></i></p>
+						nhiều mẹo phối đồ và cập nhật những xu hướng thời trang mới nhất nha.
+						<br>Nguồn tham khảo: <a
+							href="https://trendylady.shop/top-3-doi-giay-nu-co-the-phoi-moi-outfit-re-va-dep-len-do-cuc-de-dang/">Top 3 đôi giày nữ có thể phối mọi outfit - TrendyLady</a></i>
+							<br>Linh bài viết: <a
+							href= "https://www.vutrusneaker.shop/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html"> https://www.vutrusneaker.shop/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html</a>
+						</p>
 			</div>
 		</div>
 		<!-- <div class="collectipn_section_3 layout_padding">
