--- a/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html
+++ b/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html
@@ -54,7 +54,7 @@
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
 								<a class="nav-item nav-link" href="../index.html">Trang chủ</a>
-								<a class="nav-item nav-link" href="../bo-sieu-tap.html">Bộ sưu tập</a>
+								<a class="nav-item nav-link" href="../bo-suu-tap.html">Bộ sưu tập</a>
 								<a class="nav-item nav-link" href="../giay-sneaker.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="../blogs.html">Blogs</a>
 								<a class="nav-item nav-link" href="../lien-he-voi-chung-toi.html">Liên hệ</a>
@@ -193,8 +193,9 @@
 				</p>
 				<p><br>nguồn: <a
 						href="https://blog.jpculture.asia/outlet-la-gi-kinh-nghiem-mua-hang-outlet-o-nhat/">https://blog.jpculture.asia/outlet-la-gi-kinh-nghiem-mua-hang-outlet-o-nhat/</a>
-						<br>Linh bài viết: <a
-						href= "https://www.vutrusneaker.shop/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html"> https://www.vutrusneaker.shop/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html</a>
+					<br>Linh bài viết: <a
+						href="https://www.vutrusneaker.shop/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html">
+						https://www.vutrusneaker.shop/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html</a>
 				</p>
 			</section>
 
