--- a/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html
+++ b/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html
@@ -55,7 +55,7 @@
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
 								<a class="nav-item nav-link" href="../index.html">Trang chủ</a>
-								<a class="nav-item nav-link" href="../bo-sieu-tap.html">Bộ sưu tập</a>
+								<a class="nav-item nav-link" href="../bo-suu-tap.html">Bộ sưu tập</a>
 								<a class="nav-item nav-link" href="../giay-sneaker.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="../blogs.html">Blogs</a>
 								<a class="nav-item nav-link" href="../lien-he-voi-chung-toi.html">Liên hệ</a>
@@ -174,10 +174,12 @@
 					hoặc áo blazer là xong set đồ.<br><i>Đừng quên ghé vào TrendyLady thường xuyên để tìm hiểu thêm
 						nhiều mẹo phối đồ và cập nhật những xu hướng thời trang mới nhất nha.
 						<br>Nguồn tham khảo: <a
-							href="https://trendylady.shop/top-3-doi-giay-nu-co-the-phoi-moi-outfit-re-va-dep-len-do-cuc-de-dang/">Top 3 đôi giày nữ có thể phối mọi outfit - TrendyLady</a></i>
-							<br>Linh bài viết: <a
-							href= "https://www.vutrusneaker.shop/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html"> https://www.vutrusneaker.shop/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html</a>
-						</p>
+							href="https://trendylady.shop/top-3-doi-giay-nu-co-the-phoi-moi-outfit-re-va-dep-len-do-cuc-de-dang/">Top
+							3 đôi giày nữ có thể phối mọi outfit - TrendyLady</a></i>
+					<br>Linh bài viết: <a
+						href="https://www.vutrusneaker.shop/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html">
+						https://www.vutrusneaker.shop/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html</a>
+				</p>
 			</div>
 		</div>
 		<!-- <div class="collectipn_section_3 layout_padding">
