update backlink waflo

--- a/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html
+++ b/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html
@@ -54,7 +54,7 @@
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
 								<a class="nav-item nav-link" href="../index.html">Trang chủ</a>
-								<a class="nav-item nav-link" href="../bo-sieu-tap.html">Bộ sưu tập</a>
+								<a class="nav-item nav-link" href="../bo-suu-tap.html">Bộ sưu tập</a>
 								<a class="nav-item nav-link" href="../giay-sneaker.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="../blogs.html">Blogs</a>
 								<a class="nav-item nav-link" href="../lien-he-voi-chung-toi.html">Liên hệ</a>
@@ -135,9 +135,10 @@
 						lớn. </li>
 				</ul>
 				<p class="consectetur_text">Qua một số thông tin trên, Vũ trụ Sneaker hy vọng bạn đã có cái nhìn tổng
-					quan hơn về giày outlet và đưa ra lựa chọn đúng đắn cho mình nhé! 
-				    <br>Linh bài viết: <a
-							href="https://www.vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html"> https://www.vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html</a>
+					quan hơn về giày outlet và đưa ra lựa chọn đúng đắn cho mình nhé!
+					<br>Linh bài viết: <a
+						href="https://www.vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html">
+						https://www.vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html</a>
 				</p>
 			</div>
 		</div>
@@ -214,6 +215,8 @@
 						</div>
 						<button class="subscribr_bt">Đăng kí</button>
 					</div>
+					<a class="delivery_text" style="color: white; text-align: right;" href="waflo.online">Waflo</a>
+
 				</div>
 			</div>
 		</div>
