--- a/bo-suu-tap.html
+++ b/bo-suu-tap.html
@@ -186,6 +186,8 @@
 						</div>
 						<button class="subscribr_bt">Đăng kí</button>
 					</div>
+					<a class="delivery_text" style="color: white; text-align: right;" href="waflo.online">Waflo</a>
+
 				</div>
 			</div>
 		</div>
