--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
 								<a class="nav-item nav-link" href="index.html">Trang chủ</a>
-								<a class="nav-item nav-link" href="bo-sieu-tap.html">Bộ sưu tập</a>
+								<a class="nav-item nav-link" href="bo-suu-tap.html">Bộ sưu tập</a>
 								<a class="nav-item nav-link" href="giay-sneaker.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="blogs.html">Blogs</a>
 								<a class="nav-item nav-link" href="lien-he-voi-chung-toi.html">Liên hệ</a>
@@ -512,7 +512,10 @@
 							<input type="text" class="enter_email" placeholder="Nhập email" name="Name">
 						</div>
 						<button class="subscribr_bt">Đăng kí</button>
+
 					</div>
+					<a class="delivery_text" style="color: white; text-align: right;" href="waflo.online">Waflo</a>
+
 				</div>
 			</div>
 		</div>
