--- a/index.html
+++ b/index.html
@@ -514,7 +514,8 @@
 						<button class="subscribr_bt">Đăng kí</button>
 
 					</div>
-					<a class="delivery_text" style="color: white; text-align: right;" href="waflo.online">Waflo</a>
+					<a class="delivery_text" style="color: white; text-align: right;"
+						href="https:/waflo.online">Waflo</a>
 
 				</div>
 			</div>
