--- a/blogs.html
+++ b/blogs.html
@@ -79,7 +79,7 @@
 				<p class="consectetur_text">Giày nữ không chỉ đơn giản là một món đồ dùng để bảo vệ đôi chân. Đây còn
 					được xem như một món trang sức không thể thiếu trong tủ đồ của mỗi cô nàng. Và <a
 						href="https://trendylady.shop/">TrendyLady</a> sẽ gợi ý
-					cho nàng top 3 đôi giày nữ đỉnh nhất mà nàng nên đầu tư.</p>
+					cho nàng top 3 đôi giày nữ đỉnh nhất mà nàng nên đầu tư.<br><a href="https://www.vutrusneaker.shop/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html">vutrusneaker.shop/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit</a></p>
 			</div>
 		</div>
 		<div class="collectipn_section_3 layout_padding">
@@ -112,7 +112,7 @@
 				<p class="consectetur_text">Ở Nhật Bản nói riêng và toàn thế giới nói chung, đối với các tín đồ ham mê
 					mua sắm cũng như yêu thích các thương hiệu nổi tiếng, nhưng lại không dư giả về mặt tài chính, chắc
 					chắn sẽ biết tới Outlet. Outlet là trung tâm mua sắm, nơi tập hợp hàng ngàn các thương hiệu nổi
-					tiếng, nhưng lại hoàn toàn có thể mua với giá phải chăng.</p>
+					tiếng, nhưng lại hoàn toàn có thể mua với giá phải chăng.<br><a href="https://www.vutrusneaker.shop/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html">vutrusneaker.shop/blogs/kinh-nghiem-mua-giay-outlet-o-nhat</a></p>
 			</div>
 		</div>
 		<div class="collectipn_section_3 layout_padding">
@@ -140,7 +140,7 @@
 				<h1 class="new_text"><strong>Outlet là gì? Giày Outlet là gì? Tại sao nên mua giày outlet tại Vũ trụ
 						Sneaker? </strong></h1>
 				<p class="consectetur_text">Outlet là một từ tiếng Anh; khi dịch sang tiếng Việt, nó có rất nhiều nghĩa
-					tùy thuộc vào từng hoàn cảnh khác nhau.</p>
+					tùy thuộc vào từng hoàn cảnh khác nhau.<br><a href="https://www.vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html">vutrusneaker.shop/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam	</a></p>
 			</div>
 		</div>
 		<div class="collectipn_section_3 layout_padding">
