--- a/giay-sneaker.html
+++ b/giay-sneaker.html
@@ -282,7 +282,7 @@
                         </div>
                         <button class="subscribr_bt">Đăng kí</button>
                     </div>
-                    <a class="delivery_text" style="color: white; text-align: right;" href="waflo.online">Waflo</a>
+					<a class="delivery_text" style="color: white; text-align: right;" href="https:/waflo.online">Waflo</a>
 
                 </div>
             </div>
