--- a/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html
+++ b/blogs/giay-outlet-la-gi-noi-ban-giay-outlet-chinh-hang-gia-re-uy-tin-nhat-viet-nam.html
@@ -216,7 +216,7 @@
 						<button class="subscribr_bt">Đăng kí</button>
 					</div>
 					<a class="delivery_text" style="color: white; text-align: right;"
-						href="https:/waflo.online">Waflo</a>
+						href="https://waflo.online">Waflo</a>
 
 				</div>
 			</div>
