--- a/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html
+++ b/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html
@@ -273,7 +273,7 @@
 						<button class="subscribr_bt">Đăng kí</button>
 					</div>
 					<a class="delivery_text" style="color: white; text-align: right;"
-						href="https:/waflo.online">Waflo</a>
+						href="https://waflo.online">Waflo</a>
 
 				</div>
 			</div>
