--- a/lien-he-voi-chung-toi.html
+++ b/lien-he-voi-chung-toi.html
@@ -189,8 +189,8 @@
                         </div>
                         <button class="subscribr_bt">Subscribe</button>
                     </div>
-					<a class="delivery_text" style="color: white; text-align: right;" href="https:/waflo.online">Waflo</a>
-
+                    <a class="delivery_text" style="color: white; text-align: right;"
+                        href="https://waflo.online">Waflo</a>
                 </div>
             </div>
         </div>
