--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 
 					</div>
 					<a class="delivery_text" style="color: white; text-align: right;"
-						href="https:/waflo.online">Waflo</a>
+						href="https://waflo.online">Waflo</a>
 
 				</div>
 			</div>
