--- a/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html
+++ b/blogs/top-3-giay-nu-co-the-phoi-moi-loai-outfit.html
@@ -220,8 +220,8 @@
 					<div class="col-sm-6 col-lg-3">
 						<div class="social_icon">
 							<ul>
-								<li><a href="#"><img src="../images/fb-icon.png" alt=""></a></li>
-								<li><a href="#"><img src="../images/twitter-icon.png" alt=""></a></li>
+								<li><a href="https://www.facebook.com/vutrusneakerchuyengiayoutlet"><img src="../images/fb-icon.png" alt=""></a></li>
+								<li><a href="https://twitter.com/vutrusneaker"><img src="../images/twitter-icon.png" alt=""></a></li>
 								<li><a href="#"><img src="../images/in-icon.png" alt=""></a></li>
 								<li><a href="#"><img src="../images/google-icon.png" alt=""></a></li>
 							</ul>
