--- a/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html
+++ b/blogs/kinh-nghiem-mua-giay-outlet-o-nhat.html
@@ -35,7 +35,15 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 </head>
 <!-- body -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M0SHFY12BD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-M0SHFY12BD');
+</script>
 <body class="main-layout">
 	<!-- header section start -->
 	<div class="header_section header_main">
