--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>Vũ Trụ Sneaker</title>
-	<meta name="keywords" content="">
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<title>Vũ Trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam</title>
+	<meta name="keywords" content="Vũ Trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam">
+	<meta name="description" content="Vũ Trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam">
+	<meta name="author" content="Trương Quốc Đạt">
 	<!-- bootstrap css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<!-- style css -->
