--- a/index.html
+++ b/index.html
@@ -17,9 +17,51 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
 	<title>Vũ Trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam</title>
-	<meta name="keywords" content="Vũ Trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam">
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "FAQPage",
+		  "mainEntity": [{
+			"@type": "Question",
+			"name": "Giày outlet là gì?",
+			"acceptedAnswer": {
+			  "@type": "Answer",
+			  "text": "<p>Giày outlet là <b>các sản phẩm đến từ các thương hiệu nổi tiếng trên thế giới. Tuy nhiên, do xu thế mới cập nhật quá nhanh, nhiều mẫu mã mới được tung ra thị trường nên các mẫu cũ trở nên lỗi mốt, không còn đủ size hoặc không được nhà sản xuất sản xuất thêm. Hoặc cũng có thể trong quá trình sản xuất gặp một vài lỗi nhỏ nên sản phẩm không đảm bảo chất lượng so với các sản phẩm khác. Bởi vậy mà giá bán của các mặt hàng này khá rẻ, giảm khá nhiều so với mức giá đã định.</b> Mua giày sneaker chính hãng giá rẻ nhất Thủ Đức tại <a href=https://www.vutrusneaker.shop/returns>Vũ trụ Sneaker</a> to initiate a return.</p>"
+			}
+			}]
+		}
+	</script>
+	<script type="application/ld+json">
+		{
+		"@context": "https://schema.org",
+		"@type": "Organization",
+		"url": "https://www.vutrusneaker.shop",
+		"name": "Vũ trụ Sneaker",
+		"contactPoint": {
+		"@type": "ContactPoint",
+		"telephone": "+84988709195",
+		"contactType": "Customer service"
+		}
+		}
+	</script>
+	
+	<meta property="og:site_name" content="Vũ trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://www.vutrusneaker.shop/" />
+	<meta property="og:title" content="Vũ trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam" />
+	<meta property="og:latitude" content="10.772105" />
+	<meta property="og:longitude" content="106.696137" />
+	<meta property="og:street_address" content="Khu phố 6" />
+	<meta property="og:locality" content="P.Linh Trung, Q.Thủ Đức" />
+	<meta property="og:region" content="Tp.Hồ Chí Minh" />
+	<meta property="og:postal_code" content="700000" />
+	<meta property="og:country_name" content="Việt Nam" />
+	<meta property="og:email" content="vutrusneaker@gmail.com" />
+	<meta property="og:phone_number" content="+84988709195" />
+
+	<meta name="keywords" content="Vũ trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam">
 	<meta name="description" content="Vũ Trụ Sneaker chuyên giày outlet chính hãng uy tín giá rẻ nhất Việt Nam">
-	<meta name="author" content="Trương Quốc Đạt">
+	<meta name="author" content="Vũ trụ Sneaker">
 	<!-- bootstrap css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<!-- style css -->
@@ -66,6 +108,8 @@
 
   gtag('config', 'G-M0SHFY12BD');
 </script>
+
+
 <body class="main-layout">
 	<!-- Google Tag Manager (noscript) -->
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N3DCNZH"
